--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".RellenarFormulario"
+            android:name=".RellenarFormularioInsertar"
             android:label="@string/app_name_solicity"
             android:parentActivityName=".MenuPrincipalUsuario"
             android:theme="@style/AppTheme.NoActionBar"
@@ -31,6 +31,17 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MenuPrincipalUsuario" />
         </activity>
+        <activity
+            android:name=".manager.RellenarFormularioModificar"
+            android:label="@string/app_name_solicity"
+            android:parentActivityName=".MenuPrincipalUsuario"
+            android:theme="@style/AppTheme.NoActionBar"
+            >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MenuPrincipalUsuario" />
+        </activity>
+
         <activity
             android:name=".LoginPrincipal"
             android:label="@string/app_name_login"
